src/objects/Qualified_Leads_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Snap_District__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Snap_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Snap_Lead_Owner__c</fullName>
        <label>Lead Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Snap_Manager_Lvl_1__c</fullName>
        <label>Manager (Lvl 1)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Snap_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Snap_Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Snap_Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Qualified Leads Snapshot</label>
    <nameField>
        <displayFormat>L-{0000000000}</displayFormat>
        <label>Qualified Leads Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualified Leads Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>